Mesh Deform Issue with Collision-less Cloth Cage and Object with Collision #66267

Closed
opened 2019-06-30 08:54:11 +02:00 by Craig Dolphin · 5 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.25

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-28 22:08, hash: 648e8a1f1d
Worked: (optional) 2.79

Short description of error
I have an object with a mesh deform modifier and collision physics enabled on the object.
The cage has cloth physics applied to it, but collisions are unchecked in the physics panel for the cage.

When I move cage vertices, the object mesh does not move at all and I get:
ERROR (bke.modifier): c:\b\win64_cmake_vs2017\win64_cmake_vs2017\blender.git\source\blender\blenkernel\intern\modifier.c:410 modifier_setError: Cannot get mesh from cage object
in the console.

If I specify an empty collection in the greyed-out collision collection field of the cage cloth physics, then the mesh deform works as expected.
Or if I remove collision physics from the object, the mesh deform works as expected.

It seems as if there is some kind of dependency issue between the cloth and the collision physics, even though the cloth sim has the collision checkbox unchecked, and all collision related fields are greyed out.

I can work around this but it is confusing to have cloth physics encountering issues with colliders when collisions are turned off in the cloth sim and all collision fields are greyed out.

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

mesh_deform.blend
Open the blend file.
Select the cage in edit mode and apply a transform such as scale to it.
The inner cube should deform with the cage but it doesn't.

Workaround 1.
Disable collision from the inner cube and retest -> The inner cube transforms as expected.
Re-enable collision on the inner cube - >mesh transform stops working.

Workaround 2.
Select the cage and view the physics tab >collision panel.
Note that collision is unchecked and the collision collection field is greyed out.
Select Collection 2 in the greyed out field.
Retest -> The inner cube now deforms as expected when collision is applied to the inner cube..

In 2.79, mesh deform worked if collision was disabled in cage cloth sim, and collision physics were applied to object.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.25 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-28 22:08, hash: `648e8a1f1d` Worked: (optional) 2.79 **Short description of error** I have an object with a mesh deform modifier and collision physics enabled on the object. The cage has cloth physics applied to it, but collisions are unchecked in the physics panel for the cage. When I move cage vertices, the object mesh does not move at all and I get: ERROR (bke.modifier): c:\b\win64_cmake_vs2017\win64_cmake_vs2017\blender.git\source\blender\blenkernel\intern\modifier.c:410 modifier_setError: Cannot get mesh from cage object in the console. If I specify an empty collection in the greyed-out collision collection field of the cage cloth physics, then the mesh deform works as expected. Or if I remove collision physics from the object, the mesh deform works as expected. It seems as if there is some kind of dependency issue between the cloth and the collision physics, even though the cloth sim has the collision checkbox unchecked, and all collision related fields are greyed out. I can work around this but it is confusing to have cloth physics encountering issues with colliders when collisions are turned off in the cloth sim and all collision fields are greyed out. **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] [mesh_deform.blend](https://archive.blender.org/developer/F7556740/mesh_deform.blend) Open the blend file. Select the cage in edit mode and apply a transform such as scale to it. The inner cube should deform with the cage but it doesn't. Workaround 1. Disable collision from the inner cube and retest -> The inner cube transforms as expected. Re-enable collision on the inner cube - >mesh transform stops working. Workaround 2. Select the cage and view the physics tab >collision panel. Note that collision is unchecked and the collision collection field is greyed out. Select Collection 2 in the greyed out field. Retest -> The inner cube now deforms as expected when collision is applied to the inner cube.. In 2.79, mesh deform worked if collision was disabled in cage cloth sim, and collision physics were applied to object.
Author

Added subscriber: @CraigD

Added subscriber: @CraigD
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This dependency cycle is reported:

Dependency cycle detected:
  OBCube/Geometry Component/GEOMETRY_EVAL() depends on
  OBCage Cube/Geometry Component/GEOMETRY_EVAL() via 'Mesh Deform Modifier'
  OBCube/Geometry Component/GEOMETRY_EVAL() via 'Cloth Collision'
Detected 1 dependency cycles

However, this indeed shouldnt be neccessary in the case when collisions are disabled, checking...

This dependency cycle is reported: ``` Dependency cycle detected: OBCube/Geometry Component/GEOMETRY_EVAL() depends on OBCage Cube/Geometry Component/GEOMETRY_EVAL() via 'Mesh Deform Modifier' OBCube/Geometry Component/GEOMETRY_EVAL() via 'Cloth Collision' Detected 1 dependency cycles ``` However, this indeed shouldnt be neccessary in the case when collisions are disabled, checking...
Philipp Oeser self-assigned this 2019-07-01 11:28:02 +02:00

This issue was referenced by 67fc4f4bed

This issue was referenced by 67fc4f4bedded86a04d2bf98ca1642a12d9662b3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66267
No description provided.